# ComfyUI-MuScriptor

./: LICENSE  README.md  __init__.py  accelerator.py  comfy_node.py  pyproject.toml  requirements.txt
.github/: publish_action.yml
.github/workflows/: publish.yml
example/: MuScriptor Example.json
modules/: mel_spectrogram.py  streaming.py
tokenizer/: __init__.py
utils/: audio.py  resample.py  sampling.py
web_dist/: index.html
web_dist/assets/: index-Cc_b-ZGX.js  index-Dsp-ORJh.css
