[project]
name = "ComfyUI-MuScriptor"
description = "Translates Audio Music to MIDI"
version = "1.0.3"
license = "MIT" 
 classifiers = [
     # For OS-independent nodes (works on all operating systems)
     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
]

dependencies = ["torch>=2.0", "numpy>=1.24", "einops>=0.4", "mido>=1.3", "packaging>=20.0", "safetensors>=0.4", "huggingface_hub>=0.13", "typer>=0.10", "fastapi>=0.136.3", "uvicorn[standard]>=0.48.0", "httpx>=0.28.1", "python-multipart>=0.0.29", "soundfile>=0.14.0"]

[project.urls]
Repository = "https://github.com/martyyz-ai/ComfyUI-MuScriptor"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/martyyz-ai/ComfyUI-MuScriptor/wiki"
"Bug Tracker" = "https://github.com/martyyz-ai/ComfyUI-MuScriptor/issues"

[tool.comfy]
PublisherId = "martyyz"
DisplayName = "ComfyUI-MuScriptor"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

